# aurelis-blockchain

./: .gitignore  DEPLOYMENT_PLAN.md  README.md  docker-compose.yml  start_infra.bat  start_infra.sh
aurelis-explorer/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
aurelis-explorer/src/: App.tsx  index.css
aurelis-node/: CMakeLists.txt  Dockerfile  README.md
aurelis-node/docs/: protocol.md
aurelis-node/src/: main.cpp
aurelis-node/src/chain/: block.cpp  block.hpp  blockchain.cpp  blockchain.hpp  genesis.cpp  genesis.hpp  mempool.cpp  mempool.hpp  tx.cpp  tx.hpp
aurelis-node/src/miner/: miner.cpp  miner.hpp
aurelis-node/src/net/: net_messages.hpp  p2p_server.cpp  p2p_server.hpp
aurelis-node/src/rpc/: rpc_server.cpp  rpc_server.hpp
aurelis-node/src/util/: address.cpp  address.hpp  hash.hpp  hex.hpp  serialize.hpp  sha256.cpp  sha256.hpp  simplejson.hpp
aurelis-wallet/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
aurelis-wallet/design/: tokens.json
aurelis-wallet/src/: App.tsx  index.css
